hphp/hack/test/typecheck/ppl/obj_call_not_same_class.php.exp
File "obj_call_not_same_class.php", line 12, characters 5-6:
Cannot call a method on an object of a <<__PPL>> class inside a <<__PPL>> class unless using $this-> or $this:: syntax (Typing[4264])
